--- a/Main/src/main/res/values/strings.xml
+++ b/Main/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Simullim</string>
+    <string name="start">시작하기</string>
+    <string name="quit">끝내기</string>
 </resources>
