--- a/Main/src/main/res/values/strings.xml
+++ b/Main/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Simullim</string>
     <string name="start">시작하기</string>
     <string name="quit">끝내기</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
+    <string name="quit_dialog_title">종료</string>
+    <string name="quit_dialog_content">종료 하시겠습니까?</string>
 </resources>
