Playlist 완료버튼 추가

--- a/music-picker/src/main/res/values/strings.xml
+++ b/music-picker/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">music-picker</string>
     <string name="playlist">Playlist</string>
+    <string name="playlist_select">%d 선택</string>
 </resources>
