--- a/music-picker/src/main/res/values/strings.xml
+++ b/music-picker/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">music-picker</string>
     <string name="playlist">Playlist</string>
     <string name="playlist_select">%d 선택</string>
+    <string name="unknown">알 수 없음</string>
 </resources>
