--- a/Main/src/main/res/values/strings.xml
+++ b/Main/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="confirm">확인</string>
     <string name="quit_dialog_title">종료</string>
     <string name="quit_dialog_content">종료 하시겠습니까?</string>
+    <string name="play_channel_name">플레이 알림</string>
 </resources>
