--- a/Main/src/main/res/values/strings.xml
+++ b/Main/src/main/res/values/strings.xml
@@ -15,8 +15,13 @@
     <string name="start_play_setting_type_time">시간으로 설정</string>
     <string name="start_play_setting_type_distance">거리로 설정</string>
     <string name="hour">시</string>
+    <string name="hour2">시간</string>
     <string name="minute">분</string>
     <string name="second">초</string>
     <string name="kilo_meter">km</string>
     <string name="meter">m</string>
+    <string name="time_input_dialog_title">시간 입력</string>
+    <string name="distance_input_dialog_title">거리 입력</string>
+    <string name="total_length">총 길이</string>
+    <string name="start_play_setting_input_length">길이 입력</string>
 </resources>
