--- a/Main/src/main/res/values/strings.xml
+++ b/Main/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="start_play_setting_pace_interval_length">구간 길이</string>
     <string name="start_play_setting_pace_interval_velocity">구간 속도</string>
     <string name="start_play_setting_input_pace">페이스 입력</string>
+    <string name="start_play_setting_pace_empty">추가버튼을 눌러\n구간별 페이스를 설정해주세요</string>
+    <string name="start_play_setting_pace_add">구간 추가</string>
+    <string name="start_play">시작</string>
 </resources>
