--- a/Main/src/main/res/values/strings.xml
+++ b/Main/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Simullim</string>
     <string name="start">시작하기</string>
     <string name="quit">끝내기</string>
+    <string name="debug_test">테스트(debug)</string>
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
     <string name="quit_dialog_title">종료</string>
@@ -36,4 +37,8 @@
     <string name="play_setting_summary_total_distance">총 거리</string>
     <string name="play_setting_summary_total_time">총 시간</string>
     <string name="play_setting_title">플레이 설정</string>
+
+    <string name="debug_test_service_start">서비스 시작</string>
+    <string name="debug_test_service_pause">일시정지</string>
+    <string name="debug_test_service_stop">정지</string>
 </resources>
